# modell/src/main/kotlin/no/nav/dagpenger/innsyn/modell/DataRequest.kt
@@ -1,0 +1,9 @@
+package no.nav.dagpenger.innsyn.modell
+
+import java.time.LocalDate
+
+data class DataRequest(
+    val personIdent: String,
+    val fraOgMedDato: LocalDate,
+    val tilOgMedDato: LocalDate?,
+)
